feat: comprehensive website restructure with comments and contact improvements
  - Restructure site navigation from Papers/Posts to About/Research/Blog/Contact
  - Replace Utterances with Giscus for GitHub Discussions-based comments
  - Implement JavaScript email obfuscation (fg@filippoguerranti.com) to prevent scraping
  - Update homepage from detailed sections to simple navigation links
  - Remove old content structure (papers/_index.md, posts/, data/homepage.yml)
  - Add new blog structure with hello_world.md post
  - Configure Giscus with pathname mapping and preferred color scheme
  - Update config.toml with new menu structure and markdown settings
  - Clean up generated public/ files from previous build
  - Add case_mode lowercase styling and theme auto-detection
  - Update Apollo theme templates for new site structure

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -2,27 +2,13 @@
               tex: {
                 inlineMath: [['$', '$'], ['\\(', '\\)']]
               }
-            };</script><script async id=MathJax-script src=https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js></script><link title="Filippo Guerranti" href=https://filippoguerranti.com/atom.xml rel=alternate type=application/atom+xml><link href=https://filippoguerranti.com/theme/light.css rel=stylesheet><link href=https://filippoguerranti.com/theme/dark.css id=darkModeStyle rel=stylesheet><script src=https://filippoguerranti.com/js/themetoggle.js></script><script>setTheme(getSavedTheme());</script><link href=https://filippoguerranti.com/main.css media=screen rel=stylesheet><body><div class=left-content></div><div class=content><nav><div class=left-nav><a class=nav-title href=https://filippoguerranti.com>Filippo Guerranti</a><div class=socials><a class=social href=https://x.com/guerrantif rel=me> <img alt=X src=https://filippoguerranti.com/icons/social/x-twitter.svg> </a><a class=social href=https://github.com/guerrantif/ rel=me> <img alt=GitHub src=https://filippoguerranti.com/icons/social/github.svg> </a><a class=social href=https://www.linkedin.com/in/filippoguerranti/ rel=me> <img alt=LinkedIn src=https://filippoguerranti.com/icons/social/linkedin.svg> </a><a href="https://scholar.google.com/citations?user=uekwkvYAAAAJ" class=social rel=me> <img alt=Scholar src=https://filippoguerranti.com/icons/social/google-scholar.svg> </a></div></div><div class=right-nav><a href=https://filippoguerranti.com/papers style=margin-right:.5em>/Papers</a><a href=https://filippoguerranti.com/posts style=margin-right:.5em>/Posts</a><a href=https://filippoguerranti.com/contact style=margin-right:.5em>/Contact</a><a onclick="toggleTheme(); event.preventDefault();" href=# id=dark-mode-toggle> <img alt=Light id=sun-icon src=https://filippoguerranti.com/icons/sun.svg style=filter:invert()> <img alt=Dark id=moon-icon src=https://filippoguerranti.com/icons/moon.svg> </a><script>updateItemToggleTheme()</script></div></nav><div data-selector="main article p" class=visible-element-observer-root><main><article><div class=title><div class=page-header>Contact</div><div class=meta></div></div><section class=body><p>For research collaborations, questions about my work, or general interesting discussions, feel free to reach out.<ul><li><strong>Email</strong>: <span id=email-contact></span><li><strong>Social & academic profiles</strong>: <ul><li><a href="https://scholar.google.com/citations?user=uekwkvYAAAAJ" rel=noopener target=_blank>Google Scholar</a><li><a href=https://github.com/guerrantif rel=noopener target=_blank>GitHub</a><li><a href=https://www.linkedin.com/in/filippoguerranti/ rel=noopener target=_blank>LinkedIn</a><li><a href=https://x.com/guerrantif rel=noopener target=_blank>Twitter/X</a></ul><li><strong>Interests</strong>: <ul><li>Machine learning (in general) for structured data (in particular)<li>Endurance sports and training<li>(Science-based) life optimization</ul></ul><script>// Enhanced email obfuscation to prevent scraping
-(function() {
-    // Base64 encoded email parts with simple character shifting
-    const parts = [102, 103]; // 'f' and 'g'
-    const domain = [102, 105, 108, 105, 112, 112, 111, 103, 117, 101, 114, 114, 97, 110, 116, 105]; // filippoguerranti
-    const tld = [99, 111, 109]; // com
-    
-    // Build email with obfuscation
-    const user = String.fromCharCode(...parts);
-    const domainStr = String.fromCharCode(...domain);
-    const tldStr = String.fromCharCode(...tld);
-    const email = user + String.fromCharCode(64) + domainStr + String.fromCharCode(46) + tldStr;
-    
-    // Insert with delay to avoid immediate scraping
-    setTimeout(() => {
-        const element = document.getElementById('email-contact');
-        if (element) {
-            const link = document.createElement('a');
-            link.href = 'mailto:' + email;
-            link.textContent = email;
-            element.appendChild(link);
-        }
-    }, 150);
-})();</script></section></article></main></div></div><div class=right-content></div>
+            };</script><script async id=MathJax-script src=https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js></script><link title="Filippo Guerranti" href=https://filippoguerranti.com/atom.xml rel=alternate type=application/atom+xml><link href=https://filippoguerranti.com/theme/light.css rel=stylesheet><link media="(prefers-color-scheme: dark)" href=https://filippoguerranti.com/theme/dark.css rel=stylesheet><script src=https://filippoguerranti.com/js/themetoggle.js></script><script>if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                    setTheme("dark");
+                } else {
+                    setTheme("light");
+                }</script><link href=https://filippoguerranti.com/main.css media=screen rel=stylesheet><body><div class=left-content></div><div class=content><nav><div class=left-nav><a class=nav-title href=https://filippoguerranti.com>Filippo Guerranti</a><div class=socials><a class=social href=https://x.com/guerrantif rel=me> <img alt=X src=https://filippoguerranti.com/icons/social/x-twitter.svg> </a><a class=social href=https://github.com/guerrantif/ rel=me> <img alt=GitHub src=https://filippoguerranti.com/icons/social/github.svg> </a><a class=social href=https://www.linkedin.com/in/filippoguerranti/ rel=me> <img alt=LinkedIn src=https://filippoguerranti.com/icons/social/linkedin.svg> </a><a href="https://scholar.google.com/citations?user=uekwkvYAAAAJ" class=social rel=me> <img alt=Scholar src=https://filippoguerranti.com/icons/social/google-scholar.svg> </a></div></div><div class=right-nav><a href=https://filippoguerranti.com/about style=margin-right:.5em>/About</a><a href=https://filippoguerranti.com/research style=margin-right:.5em>/Research</a><a href=https://filippoguerranti.com/blog style=margin-right:.5em>/Blog</a><a href=https://filippoguerranti.com/contact style=margin-right:.5em>/Contact</a></div></nav><div data-selector="main article p" class=visible-element-observer-root><main><article><div class=title><div class=page-header>Contact</div><div class=meta></div></div><section class=body><p>For research collaborations, questions about my work, or general interesting discussions, feel free to reach out:<h2 id=email>Email</h2><span id=email-contact> <noscript>Enable JavaScript to view email address</noscript> </span><script>document.addEventListener('DOMContentLoaded', function() {
+    const parts = ['fg', 'filippo', 'guerranti', 'com'];
+    const email = parts[0] + '@' + parts[1] + parts[2] + '.' + parts[3];
+    const emailElement = document.getElementById('email-contact');
+    emailElement.innerHTML = '<a href="mailto:' + email + '">' + email + '</a>';
+});</script><h2 id=social-media>Social Media</h2><p>You can also find me on the social platforms linked in the navigation bar above.</section></article></main></div></div><div class=right-content><div class=toc><ul class=toc-list><li class=parent><a href=https://filippoguerranti.com/contact/#email>Email</a><li class=parent><a href=https://filippoguerranti.com/contact/#social-media>Social Media</a></ul></div></div>
